# OmniGuard

./: .env.example  .gitignore  README.md  camera.py  config.py  connection.py  database.py  db_models.py  docker-compose.yml  main.py  personDetector.py  plan.md  pyproject.toml  source_selection_dialog.py
